--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@sentry/nextjs": "^8.17.0",
     "appwrite": "^15.0.0",
     "chart.js": "^4.4.2",
     "class-variance-authority": "^0.7.0",
